fixed the font alignment thing

--- a/common/kxtion_site_lib.css
+++ b/common/kxtion_site_lib.css
@@ -70,6 +70,8 @@ tbtn + tbtn {
 hc1 {
   font-size: 2em;
   line-height: 0%;;
+  position:relative;
+  top:20px;
   font-family: 'Chilanka', cursive;
 }
 
